# 3dPot

./: .gitignore  .pylintrc  ARQUIVOS-CRIADOS-MODIFICADOS-INTEGRACAO.md  BACKEND_TEST_RESULTS.md  BRANCH_CONSOLIDATION_GUIDE.md  CHANGELOG.md  CI_COLLECTION_FIXES.md  CI_COMPLETE_SUCCESS_FINAL.md  CI_F821_FINAL_FIX.md  CI_FINAL_PERFECT_SUCCESS_COMPLETE.md  CI_TEST_COLLECTION_FIXES.md  CODE_OF_CONDUCT.md  CONSOLIDATION_FINAL_REPORT.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  CRONOGRAMA_ACOMPANHAMENTO.md  ENTREGA-FINAL-SPRINT2.md  ENTREGA-FINAL-SPRINT4.md  FRAMEWORK-ADAPTER-README.md  FRAMEWORK-ADAPTER-VALIDATION.md  GUIA-GITHUB-ACTIONS-BADGES.md  GUIA_NAVEGACAO_DOCUMENTOS.md  IMPLEMENTACAO-COMPLETA-FINAL.md  INSTRUCOES-RAPIDAS.sh  INTEGRACAO-FRONTEND-BACKEND-SPRINT6-COMPLETA.md  ISSUES_RESOLUTION_SUMMARY.md  ISSUE_TEMPLATE-feature-request.md  LICENSE  MERGE_COMPLETION_SUMMARY.md  MIGRATION_GUIDE.md  OPTIMIZATION_REPORT.md  PERFORMANCE_ANALYSIS.md  PLANO-SPRINT3.md  PLANO-SPRINT5.md  README-INTEGRACAO-SPRINT6.md  README-MODELAGEM-INTELIGENTE.md  README-SPRINT2.md  README-V2.md  README-VERIFICACAO.md  README.md  (+68 more)
.github/: pull_request_template.md
3dpot-platform/: .env.example  .gitignore  ARQUIVOS-IMPLEMENTADOS-SPRINT-2-3.md  ARQUIVOS-SPRINT-4-5-IMPLEMENTADOS.md  ARQUIVOS-SPRINT-6-PLUS-COMPLETO.md  README.md  RELATORIO-SPRINT-1-COMPLETO.md  RELATORIO-SPRINT-2-3-COMPLETO.md  RELATORIO-SPRINT-4-5-COMPLETO.md  RESUMO-SPRINT-2-3-FINALIZADO.md  RESUMO-SPRINT-4-5-FINALIZADO.md  SPRINT6-PLUS-COMPLETO.md  STATUS-FINAL-PROJETO-COMPLETO.md  STATUS-PROJETO-SPRINT-2-3.md  setup-local.sh  setup.sh
backend/: .env.example  ARQUIVOS-BACKEND-SPRINT-6.md  BACKEND_README.md  Dockerfile.dev  README.md  README_SPRINT3.md  SPRINT3_COMPLETE.md  SPRINT6-BACKEND-COMPLETO.md  TESTES_IMPLEMENTACAO.md  __init__.py  celery_app.py  database.py  init_backend.py  main.py  main_backup.py  main_unified.py  pytest.ini  requirements-minimal.txt  requirements-test.txt  requirements.txt  run_tests.sh  start.sh
browser/: global_browser.py
central-inteligente/: MANUAL-MONTAGEM.md  README.md  RESUMO-EXECUTIVO.md  central_control.py  config.json  requirements.txt  setup.sh
external_api/: __init__.py
frontend/: package.json
interface-web/: .env.example  .npmrc  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  INTEGRACAO-HARDWARE-RESUMO.md  README-SPRINT4.md  README.md  RELATORIO-ATUALIZACAO-REPOSITORIO.md  SISTEMA-COMPLETO.md  deploy.sh  docker-compose.yml  fix-project.sh  index.html  package.json  setup.sh  start.sh  tailwind.config.js  (+3 more)
(+448 files in other folders)
