[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3dpot"
version = "1.0.0"
description = "3dPot - Projetos Maker com Hardware e Impressão 3D"
authors = [
    {name = "3dPot Team", email = "team@3dpot.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Electronics",
    "Topic :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Dependências principais do projeto
dependencies = [
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "packaging>=21.0",
]

# Dependências de desenvolvimento
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
raspberry-pi = [
    "opencv-python>=4.8.0",
    "flask>=2.3.0",
    "numpy>=1.24.0",
    "picamera2>=0.3.0",
]
esp32-tools = [
    "esptool>=4.0.0",
    "platformio>=6.0.0",
    "pyserial>=3.5.0",
]
arduino-tools = [
    "arduino-cli>=0.35.0",
    "platformio>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=3dpot --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["3dpot"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.setuptools]
packages = ["external_api", "external_api.data_sources"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[project.urls]
Homepage = "https://github.com/dronreef2/3dPot"
Repository = "https://github.com/dronreef2/3dPot.git"
Issues = "https://github.com/dronreef2/3dPot/issues"
Changelog = "https://github.com/dronreef2/3dPot/blob/main/CHANGELOG.md"